<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">✧Audiobook Player✧</string>
    <string name="timer_icon">Timer Icon</string>
    <string name="title">%s</string>
    <string name="book_percentage">%1$d%%</string>
    <string name="time_listened">Time Listened</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="total_duration">Total Duration</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="bookmark_icon">Bookmark Icon</string>
    <string name="equaliser_icon">Equaliser Icon</string>
    <string name="skip_left">Skip Left</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip_right">Skip Right</string>
    <string name="rewind">Rewind</string>
    <string name="menu">Menu</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="set_timer">Set Timer</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="version">Version 1.0</string>
    <string name="current_path">Main storage/Audiobooks</string>
    <string name="playback_speed_label">Playback Speed: %1$.1fx</string>
    <string name="equaliser_settings">Equaliser</string>
    <string name="bass">Bass</string>
    <string name="treble">Treble</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="increase_speed_increment">+0.10x</string>
    <string name="decrease_speed_decrement">-0.10x</string>
    <string name="rewind_by">-%1$ds</string>
    <string name="forward_by">+%1$ds</string>
    <string name="timer_remaining">%1$s:%2$s:%3$s</string>
    <string name="pitch_label">Playback Speed: %1$.1fx</string>
    <string name="amp_description">amplify</string>
    <string name="timer_not_set">--:--:--</string>
    <string-array name="time_options">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>Custom</item>
    </string-array>
    <string-array name="rewind_values">
        <item>5s</item>
        <item>10s</item>
        <item>30s</item>
    </string-array>
    <string name="channel_name">Audiobook Playback</string>
    <string name="channel_description">Controls for audiobook playback</string>
    <string name="copyright">Created by Octako, 2024</string>
</resources>
